--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   ece566:
+    build:
+      context: .
+      dockerfile: Dockerfile.remote
     cap_add:
       - SYS_PTRACE
     security_opt: # options needed for debugging
       - seccomp:unconfined
       - apparmor:unconfined
     privileged: true
-    build: .
     volumes:
       - .:/ece566
     container_name: ece566
